feat: center and refactor snake